# 3dgs-pp

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
src/threeds_pp/: __init__.py  main.py  test_util.py
src/threeds_pp/cli/: __init__.py  downsample.py  filter.py  info.py  split.py  stat.py  view.py
src/threeds_pp/core/: __init__.py  bounds.py  downsampler.py  filter.py  partition.py  stats.py
src/threeds_pp/ply/: __init__.py  header.py  reader.py  writer.py
