[project]
name = "3dgs-pp"
version = "0.1.0"
description = "3DGS Point Cloud Processing Tool - A lazy-loading PLY file viewer and partitioner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
3dgs-pp = "threeds_pp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threeds_pp"]
